fixed centre alignment issue

--- a/src/styleSheet.css
+++ b/src/styleSheet.css
@@ -1,12 +1,14 @@
 h1 {
     font: Arial;
     color: green;
-    background: black
+    background: white;
+    text-align: center;
 
 }
 #container{
     align-content: center;
     align-items: center;
+    text-align: center;
     justify-content: center;
     padding-left: 20%;
     padding-right: 20%;
